fix: nav z-index

--- a/shelter/assets/sass/_header.scss
+++ b/shelter/assets/sass/_header.scss
@@ -98,6 +98,7 @@
         height: 100vh;
         background-color: #292929;
         transition: 0.3s;
+        z-index: 998;
 
 
         &__list {
